--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -1,8 +1,29 @@
-docker-build:
+image: docker:latest
+services:
+  - name: docker:dind
+    alias: docker
+
+stages:
+  - Build image
+  - Test acceptation
+
+build:
   # Official docker image.
-  image: docker:latest
-  stage: build
-  services:
-    - docker:dind
+  stage: Build image
   script:
     - docker build -t alpinehelloworld .
+    - docker save alpinehelloworld > alpinehelloworld.tar
+  artifacts:
+    paths:
+      - alpinehelloworld.tar
+
+
+test acceptation:
+  # Official docker image.
+  stage: Test acceptation
+  script:
+    - docker load < alpinehelloworld.tar
+    - docker run -d -p 80:5000 -e PORT=5000 --name webapp alpinehelloworld
+    - sleep 5
+    - apk --no-cache add curl
+    - curl "http://docker" | grep -q "Hello world!"
